--- a/bookmark_manager/Gemfile
+++ b/bookmark_manager/Gemfile
@@ -1,12 +1,15 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
 
 ruby '2.5.1'
 
 gem 'capybara'
 gem 'chromedriver-helper'
+gem 'pg'
 gem 'rspec'
 gem 'rubocop'
 gem 'selenium-webdriver'
-gem 'sinatra'
 gem 'simplecov', require: false
-  gem 'simplecov-console', require: false
+gem 'simplecov-console', require: false
+gem 'sinatra'
